@@ -2538,6 +2538,7 @@ GEN     lindep_Xadic(GEN x);
 GEN     algdep(GEN x, long n);
 GEN     algdep0(GEN x, long n, long bit);
 void    forqfvec(void *E, long (*fun)(void *, GEN, GEN, double), GEN a, GEN BORNE);
+void    forqfvec1(void *E, long (*fun)(void *, GEN), GEN a, GEN BORNE);
 void    forqfvec0(GEN a, GEN BORNE, GEN code);
 GEN     bestapprnf(GEN x, GEN T, GEN rootsT, long prec);
 GEN     gaussred_from_QR(GEN x, long prec);
